added test case